course/show front OK, comment ajax OK, comment delete ajax OK, comment_btn toggle OK, edit favorite btn to ajax

--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -1,7 +1,6 @@
 <div class="container-fluid">
   <div>
     <% @evaluations.each_with_index do |e, i|  %>
-
         <% unless i == 0 %>
             <hr class="feed_hr">
         <% end %>
@@ -70,85 +69,74 @@
               </div>
 
               <p class="feed_content tab_feed col-xs-12">
-                <%= e.body.html_safe %></p>
+                <%= e.body.html_safe %>
+              </p>
               <p class="feed_etc col-xs-12">
                 <%= e.time_ago %>
                 &nbsp;·&nbsp;
-                <%= image_tag "reply.svg", alt: "reply", class: "reply_btn", id: "#{e.id}", class: "reply_count" %>
+                <%= image_tag "reply.svg", alt: "reply", id: "#{e.id}", class: "reply_count reply_btn" %>
                 <span id="comment_count<%=e.id%>" class="reply_count"><%= e.comments.count %></span>
                 &nbsp;·&nbsp;
                 <a href="#"><%= image_tag "siren.svg", alt: "lion" %></a>
-                <br>
+                <br><br>
+              </p>
 
-
-                <!--수정해야함-->
-                <% e.comments.order(created_at: :desc).each_with_index do |c,i| %>
-                  <div class="reply_div col-xs-12">
-                    <div class="reply_right col-xs-12">
-                      <% if i==e.comments.count-1 %>
-                          <div class="bubble_content bubble_last">
-                            <%= c.user.nickname %>
-                            <span class="bubble_top_right">
-                              3시간 전
-                              &nbsp;·&nbsp;
-                              <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                              &nbsp;·&nbsp;
-                              <a href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                            </span>
-                            <br>
-                            <%= c.body %>
-                            <%= c.body %><br>
-                          </div>
-                      <% else %>
-                          <div class="bubble_content"><%= c.user.nickname %>
-                            <span class="bubble_top_right">
-                              3시간 전
-                              &nbsp;·&nbsp;
-                              <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
-                              &nbsp;·&nbsp;
-                              <a href="#"><i class="fa fa-trash-o" aria-hidden="true"></i></a>
-                            </span>
-                            <br>
-                            <%= c.body %>
-                            <%= c.body %><br>
-                          </div>
-                      <% end %>
-                    </div>
-                  </div>
-              <% end %>
-              <div class="reply_div col-xs-12">
-                <div class="bubble_list">
-                  <div class="bubble clearfix">
-                  </div>
-                </div>
-                <div class="reply_right col-xs-12">
-                  <%= form_for(Comment.new, url: evaluation_comments_path(evaluation_id: e.id ), remote: true) do |f| %>
-                      <%= f.hidden_field :evaluation_id, value: e.id %>
-                      <%= f.text_area :body, placeholder: "자유롭게 댓글을 입력해주세요.", rows: 3, class: "bubble_content bubble_write reply_box"%>
-                      <div class="bubble_content reply_btn_div bubble_btn">
-                        <%= f.submit "작성하기", class: "reply_write_btn" %>
+              <%# 댓글 달때 빵빵 달리는 부분%>
+              <div class="col-xs-12" id="reply_list_wrap<%=e.id%>" style="display: none;">
+                <div class="reply_div col-xs-12">
+                  <div class="reply_right col-xs-12" id="reply_list<%=e.id%>">
+                    <% e.comments.each do |c| %>
+                      <div class="bubble_content" id="reply_list_child<%=c.id%>">
+                        <%= c.user.nickname %>
+                        <span class="bubble_top_right">
+                        <%= c.time_ago %>
+                        <% if c.user == @current_user %>
+                          &nbsp;·&nbsp;
+                          <%# 수정 - 구현해야함 %>
+                          <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+                          &nbsp;·&nbsp;
+                          <%# 삭제 %>
+                          <%= link_to comment_path(c), remote: true, method: :delete do %>
+                              <i class="fa fa-trash-o" aria-hidden="true"></i>
+                          <% end %>
+                        <% end %>
+                        </span>
+                        <br>
+                        <%= c.body %>
+                        <br>
                       </div>
                   <% end %>
+                  </div>
+                </div>
+                <div class="reply_div col-xs-12">
+                  <div class="bubble_list">
+                    <div class="bubble clearfix"></div>
+                  </div>
+                  <div class="reply_right col-xs-12">
+                    <%= form_for(Comment.new, url: evaluation_comments_path(evaluation_id: e.id ), remote: true) do |f| %>
+                        <%= f.text_area :body, id: "comment_body#{e.id}" ,placeholder: "자유롭게 댓글을 입력해주세요.", rows: 3, class: "bubble_content bubble_write reply_box", autocomplete: "off" %>
+                        <div class="bubble_content reply_btn_div bubble_btn">
+                          <%= f.submit "작성하기", class: "reply_write_btn" %>
+                        </div>
+                    <% end %>
+                  </div>
                 </div>
               </div>
-              <!--수정해야함-->
-              </p>
+              <!--///여기까지-->
+
             </div>
           </div>
         </div>
     <% end %>
-
   </div>
 </div>
-
-
 
 
 <script>
   <%# 댓글리스트 보였다 안보였다 %>
   $(".reply_btn").click(function(){
     var id = $(this).attr('id');
-    var $target = $('#comment_list_wrap'+id);
+    var $target = $('#reply_list_wrap'+id);
 
     $target.slideToggle( 500, function () {
       $target.is(':visible') ? 'Hide' : 'Show';
@@ -157,68 +145,47 @@
 
   <%# 평점별점바 %>
   $('.p1').barrating('show', {
-    theme: 'bars-pill',
+    theme: 'bars-movie',
     initialRating: '1',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
     readonly: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
   });
 
   $('.p2').barrating('show', {
-    theme: 'bars-pill',
+    theme: 'bars-movie',
     initialRating: '2',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
     readonly: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
   });
 
   $('.p3').barrating('show', {
-    theme: 'bars-pill',
+    theme: 'bars-movie',
     initialRating: '3',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
     readonly: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
   });
 
   $('.p4').barrating('show', {
-    theme: 'bars-pill',
+    theme: 'bars-movie',
     initialRating: '4',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
     readonly: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
   });
 
   $('.p5').barrating('show', {
-    theme: 'bars-pill',
+    theme: 'bars-movie',
     initialRating: '5',
     showValues: true,
     showSelectedRating: false,
     allowEmpty: true,
     readonly: true
-    // emptyValue: '-- no rating selected --'
-    // onSelect: function(value, text) {
-    // alert('Selected rating: ' + value);
-    // }
   });
-
 </script>
