--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,18 @@
 <%# 댓글작성시 list에 append될 부분만 partial로 만들기%>
-<div id="comment_list_child<%=@comment.id%>">
-  <%= @comment.user.nickname %> &nbsp; <%= @comment.time_ago %>
-  <% if @comment.user == @current_user %>
-      ·
-      <a href="#">수정</a>
-      ·
-      <%= link_to '삭제', comment_path(@comment), remote: true, method: :delete %>
-  <% end %>
-  <br/>
-  <div id="comment_list_body<%=@comment.id%>"><%= @comment.body %></div>
-  <br/>
+<div class="bubble_content" id="reply_list_child<%=@comment.id%>">
+  <%= @comment.user.nickname %>
+  <span class="bubble_top_right">
+    <%= @comment.time_ago %>
+    <% if @comment.user == @current_user %>
+      &nbsp;·&nbsp;
+      <a href="#"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+      &nbsp;·&nbsp;
+      <%= link_to comment_path(@comment), remote: true, method: :delete do %>
+          <i class="fa fa-trash-o" aria-hidden="true"></i>
+      <% end %>
+    <% end %>
+    </span>
+  <br>
+  <%= @comment.body %>
+  <br>
 </div>
