--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,2 +1,2 @@
-var comment_id = <%= @comment.id %><%# 댓 아이디 겟 %>
-$("#comment_list_child"+comment_id).hide();
+var comment_id = '<%= @comment.id %>';<%# 댓 아이디 겟 %>
+$("#reply_list_child"+comment_id).hide();
