--- a/app/views/courses/_evaluations.html.erb
+++ b/app/views/courses/_evaluations.html.erb
@@ -82,7 +82,7 @@
               </p>
 
               <%# 댓글 달때 빵빵 달리는 부분%>
-              <div class="col-xs-12" id="reply_list_wrap<%=e.id%>" style="display: none;">
+              <div class="col-xs-12 reply_list_wrap" id="reply_list_wrap<%=e.id%>" style="display: none;">
                 <div class="reply_div col-xs-12">
                   <div class="reply_right col-xs-12" id="reply_list<%=e.id%>">
                     <% e.comments.each do |c| %>
@@ -102,8 +102,9 @@
                         <% end %>
                         </span>
                         <br>
-                        <%= c.body %>
-                        <br>
+                        <p>
+                          <%= c.body %><br>
+                        </p>
                       </div>
                   <% end %>
                   </div>
